--- a/bot.env
+++ b/bot.env
@@ -1,2 +1,2 @@
-TOKEN=MTIwMjkxNDczNzc5MzI3ODAyMg.GVJxUk.TrAaJoXPBJZ1hHSOSBxKY9QpkNPbqOFsbKqZ9k
+TOKEN=MTIwMjkxNDczNzc5MzI3ODAyMg.G9qWt4.pM4RFhxD_H724lR1vY_8LFFrQSlssKsrWMaiQI
 OWM_KEY=72289e1ca528512ed0f2ac0400c0b9d3
